# MusicAssistantNative

./: .gitignore  404.html  AppImageBuilder.yml  CLAUDE.md  CMakeLists.txt  MUSIC_ASSISTANT_API_RESEARCH.md  README.md  index.html  io.github.musicassistant.native.desktop  io.github.musicassistant.native.metainfo.xml  local_debug.sh  mkdocs.yml  musicassistant-native.spec  sitemap.xml
.github/workflows/: ci.yml  docs.yml
debian/: changelog  control  copyright
developer/api/: index.html
developer/architecture/: index.html
developer/backend/: index.html
developer/building/: index.html
developer/contributing/: index.html
developer/frontend/: index.html
developer/packaging/: index.html
developer/testing/: index.html
docs/: index.md
docs/developer/: api.md  architecture.md  backend.md  building.md  contributing.md  frontend.md  packaging.md  testing.md
docs/user/: connecting.md  getting-started.md  library.md  playback.md  players.md  queue.md  troubleshooting.md
scripts/: build-appimage.sh
search/: search_index.json
src/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  imageprovider.cpp  imageprovider.h  librarycontroller.cpp  librarycontroller.h  localplayer.cpp  localplayer.h  maclient.cpp  maclient.h  main.cpp  mediaitemmodel.cpp  mediaitemmodel.h  mpris2player.cpp  mpris2player.h  playercontroller.cpp  playercontroller.h  playermodel.cpp  playermodel.h  queuecontroller.cpp  queuecontroller.h  queueitemmodel.cpp  queueitemmodel.h  sendspinclient.cpp  sendspinclient.h  streambuffer.cpp  streambuffer.h
src/qml/: AboutPage.qml  AlbumDetailPage.qml  AlbumGridDelegate.qml  ArtistDetailPage.qml  LibraryPage.qml  Main.qml  MediaItemDelegate.qml  NowPlayingPage.qml  PlayersPage.qml  PlaylistDetailPage.qml  QueuePage.qml  SettingsPage.qml
tests/: conftest.py  mock_server.py  pytest.ini  test_connection.py  test_images.py  test_library.py  test_players.py
user/connecting/: index.html
user/getting-started/: index.html
user/playback/: index.html
user/players/: index.html
user/queue/: index.html
user/troubleshooting/: index.html
